--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html{
+    background-color: floralwhite;
+}
+
 #buttons{
     display: flex; 
     justify-content: space-around;
@@ -7,7 +11,7 @@
 
 #results{
     display: flex;
-    height: 50vh;
+    height: 20vh;
     justify-content: center;
     align-items: center;
     flex-direction: column;
